[package]
name = "tracenexus"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
is_elevated = "0.1"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
walkdir = "2.5"
csv = "1.3"
zip = "2.2.2"
reqwest = { version = "0.12", features = ["multipart", "blocking"] }
dotenvy = "0.15"
colored = "2.1"